--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -1,32 +1,102 @@
-{% extends 'base.html' %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>To-Do List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="wrapper">
+        <form class="p-3 mt-3" method="POST">
+            {% csrf_token %}
+                <div class="text-center mt-0 name">To-Do List</div>
+                <div class="text-center mt-0 user">User: {{ user }}</div>
+                <p></p>
+                <div class="card-deck">
+                {% for barang in list_barang %}
+                    <div class="card-group">
+                        <div class="card border-dark mb-3">
+                            <div class="card-header mt-2">
+                                <h5 class="card-title">{{ barang.title }}</h5>
+                            </div>
+                            <div class="card-body text-dark text-left">
+                                <p class="card-text">{{ barang.description }}</p>
+                            </div>
+                            <div class="card-footer text-left">
+                                <small class="text-muted">{{ barang.date }}</small>
+                            </div>
+                         </div>
+                    </div>
+                {% endfor %}
+            </div>
+            <p></p>
+            <a href="{% url 'todolist:create-task' %}" class="btn button-custom rounded-pill">Add Task</a>
+            <p></p>
+            <a href="{% url 'todolist:logout' %}" class="btn button-custom rounded-pill" >Logout</a> 
+        </form>
 
-{% block content %}
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        
+</body>
+</html>
 
-  <h1>To-Do List</h1>
 
-  <p>Username: </p>
-  <h4>{{user}}</h4>
+<style>@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
-  <h5></h5>
-  <table>
-    <tr>
-        <th>Date</th>
-        <th>Title</th>
-        <th>Description</th>
-    </tr>
+html, body {
+    background: #edd1c4;
+    max-height: 100%;
+    max-width: 100%;
+}
 
-    {% comment %} Tambahkan data di bawah baris ini {% endcomment %}
-    {% for barang in list_barang %}
-        <tr>
-            <th>{{barang.date}}</th>
-            <th>{{barang.title}}</th>
-            <th>{{barang.description}}</th>
-        </tr>
-    {% endfor %}
-</table>
+.wrapper {
+    width: 1000px;
+    margin: 50px auto 50px auto;
+    padding: 20px 30px 30px 30px;
+    background-color: #f9f3f0;
+    border-radius: 20px;
+    box-shadow: 13px 13px 20px #dab5a3, -13px -13px 20px #dab5a3;
+}
 
-<h5>Sesi terakhir login: {{ last_login }}</h5>
-<button><a href="{% url 'todolist:create-task' %}">Tambah Task Baru</a></button>
-<button><a href="{% url 'todolist:logout' %}">Logout</a></button>
+.wrapper .name {
+    font-weight: 600;
+    font-size: 2.4rem;
+    margin: 20px auto;
+    letter-spacing: 1.3px;
+    color: #b66e6a;
+}
 
-{% endblock content %}
+.wrapper .user {
+    font-weight: 400;
+    font-size: 1rem;
+    color: #ef4f10;
+}
+
+.wrapper .btn {
+    box-shadow: none;
+    width: 100%;
+    height: 40px;
+    background-color: #bf4e48;
+    color: #fff;
+    border-radius: 25px;
+    box-shadow: 3px 3px 3px #b1b1b1,
+        -3px -3px 3px #fff;
+    letter-spacing: 1.3px;
+}
+
+.wrapper .btn:hover {
+    background-color: #dab5a3;
+}
+
+</style>
