--- a/todolist/templates/todolist.html
+++ b/todolist/templates/todolist.html
@@ -9,42 +9,113 @@
   </head>
   <body>
     <div class="wrapper">
-        <form class="p-3 mt-3" method="POST">
-            {% csrf_token %}
-                <div class="text-center mt-0 name">To-Do List</div>
-                <div class="text-center mt-0 user">User: {{ user }}</div>
-                <p></p>
-                <div class="card-deck">
-                {% for barang in list_barang %}
-                    <div class="card-group">
-                        <div class="card border-dark mb-3">
-                            <div class="card-header mt-2">
-                                <h5 class="card-title">{{ barang.title }}</h5>
-                            </div>
-                            <div class="card-body text-dark text-left">
-                                <p class="card-text">{{ barang.description }}</p>
-                            </div>
-                            <div class="card-footer text-left">
-                                <small class="text-muted">{{ barang.date }}</small>
-                            </div>
-                         </div>
-                    </div>
-                {% endfor %}
+      <form class="p-3 mt-3" method="POST" action="">
+        {% csrf_token %}
+            <div class="text-center mt-0 name">To-Do List</div>
+            <div class="text-center mt-0 user">User: {{ user }}</div>
+            <p></p>
+            <table class="table table-bordered">
+                <tr>
+                    <th>Date</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                </tr>
+            </table>
+            <h6>Sesi terakhir login: {{ last_login }}</h6>
+            <div class="modal fade" id="modalAddTaskForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+            aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header text-center">
+                    <h6 class="text-center name">What's next?</h6>    
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body mx-3"> 
+                    <input type="text" name="title" placeholder="Title" class="form-control" id="input_title">
+                    <p></p>
+                    <input type="text" name="description" placeholder="Description" class="form-control" id="input_description">
+                    <p></p>
+                    <button id="add" class="btn button-custom rounded-pill">Add</button>
+                  </div>
+                </div>
+              </div>
             </div>
-            <p></p>
-            <a href="{% url 'todolist:create-task' %}" class="btn button-custom rounded-pill">Add Task</a>
-            <p></p>
-            <a href="{% url 'todolist:logout' %}" class="btn button-custom rounded-pill" >Logout</a> 
-        </form>
-
+          <div class="text-center">
+            <button id="add_task" class="btn button-custom rounded-pill">Add Task</button>
+          </div>
+          <p></p>
+          <a href="{% url 'todolist:logout' %}" class="btn button-custom rounded-pill" >Logout</a> 
+      </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script>
+        function addTask(){
+            var itemCount = $(".table > tbody").children().length;
+            for(var i = itemCount; i >= 2; i--){
+                $(".table > tbody > tr:nth-child(" + i + ")").remove();
+        }
+
+        $.get("http://localhost:8000/todolist/json/", function(data) {
+            for(var i = 0; i < data.length; i++){
+                var tr = document.createElement("tr");
+                var date_td = document.createElement("td");
+                date_td.append(data[i].fields.date);
+                var title_td = document.createElement("td");
+                title_td.append(data[i].fields.title);
+                var description_td = document.createElement("td");
+                description_td.append(data[i].fields.description);
+                
+                tr.append(date_td);
+                tr.append(title_td);
+                tr.append(description_td);
+                
+                $(".table").append(tr);
+            }
+          });
+        }
+    
+        $(document).ready(function(){
+            addTask();
+            function validate(){
+            if ($('#input_title').val().length > 0 &&
+                $('#input_description').val().length > 0){
+                $("#Send-footer").prop("disabled", false);
+            }
+            else {
+                $("#Send-footer]").prop("disabled", true);
+            }
+        }
         
+        $('#add_task').click(function(e) {
+            e.preventDefault();
+            $('#modalAddTaskForm').modal();
+        });
+
+        $('#add').click(function(e) {
+            var title = $("#input_title").val();
+            var description = $("#input_description").val();
+            validate();
+            $.post("http://localhost:8000/todolist/add/",
+            {
+                title,
+                description,
+            },
+            function(data, status){
+                console.log("add task success");
+                addTask();
+                $("#input_title").val("");
+                $("#input_description").val("");
+            });
+          });
+        });
+    </script>
 </body>
 </html>
-
 
 <style>@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 * {
